lazarus (0.9.4)

	  * Started package

	 -- Mattias Gaertner <mattias@cvs.freepascal.org>  Sun, 13 Jul 2003 16:35:45 +0200

	